--- a/Gastos.Pwa/Properties/launchSettings.json
+++ b/Gastos.Pwa/Properties/launchSettings.json
@@ -11,10 +11,11 @@
     },
     "https": {
       "commandName": "Project",
+      "commandLineArgs": " \"C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe\" --incognito https://localhost:7142",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchBrowser": true,
       "dotnetRunMessages": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7142;http://localhost:5262"
