Update dependencies, localization, and UI enhancements
- 🔄 **Binary Updates**: Updated and added `.nupkg` files for `DocIntel.Api.Sdk` and `DocIntel.Contracts`.
- 📦 **Dependency Upgrades**: Updated multiple Microsoft and third-party packages, including `DocIntel.Api.Sdk` to `1.1.2` and `Microsoft.AspNetCore.*` to `9.0.10`.
- 🛠️ **Logic Enhancements**: Improved store update logic in `StoreRepository.cs` and receipt matching in `AnalysisJobsPending.razor`.
- 🌐 **Localization**: Replaced hardcoded text with localized strings for login, camera actions, and errors.
- 🎨 **UI Improvements**: Enhanced date handling, added delete buttons, and optimized layouts in various Razor components.
- 🚀 **Performance**: Reduced refresh interval and optimized API calls for pending job status checks.
- 🏗️ **Build Config**: Adjusted `NugetDestination` path and added logging for file copy operations.
- 🆙 **Versioning**: Incremented build number and updated metadata in `version-info.json`.

--- a/Gastos.Api/Gastos.Api.csproj
+++ b/Gastos.Api/Gastos.Api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <NugetSource>O:\Repos\1.Nugets</NugetSource>
-    <NugetDestination>..\..\.nuget-local</NugetDestination>
+    <NugetDestination>..\.nuget-local</NugetDestination>
   </PropertyGroup>
 
   <Target Name="CopyNugets" AfterTargets="Compile" Condition="Exists('$(NugetSource)')">
@@ -11,6 +11,7 @@
       <DestinationFile Include="@(SourceFile->'$(NugetDestination)\%(RecursiveDir)%(Filename)%(Extension)')" />
     </ItemGroup>
     <Copy SourceFiles="@(SourceFile)" DestinationFiles="@(DestinationFile)" SkipUnchangedFiles="true" />
+    <Message Text="Copiado ficheros @(SourceFile) a $(NugetDestination)" Importance="High" />
   </Target>
   
   <ItemGroup>   
